appId: net.cj.cjhv.gs.tving
#로그인 수단 선택 화면 > TVING ID 로그인 가능 확인
#로그인 후 홈화면 진입 가능함
---
- launchApp:
    appId: 'net.cj.cjhv.gs.tving'
    clearState: true
    clearKeychain: true # optional: clear *entire* iOS keychain
    stopApp: false # optional (true by default): stop the app before launching it
    permissions:
      { all: allow } # optional: by default all permissions are allowed,
      # even if clearState: true is passed
- tapOn:
    id: 'com.android.permissioncontroller:id/permission_allow_button'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_accept'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/btn_close'
    optional: true
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/text_confirm'
- tapOn: '티빙 로그인'
- extendedWaitUntil:
    visible: 'TVING ID로 시작하기'
    timeout: 30000
- tapOn: 'TVING ID로 시작하기'
- tapOn: '아이디'
- inputText:
    text: 't_principle4'
- tapOn:
    text: '비밀번호'
- inputText:
    text: '1q2w3e4r5t'
- tapOn: '로그인하기'
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/image_thumbnail'
    index: 0
- tapOn: #기술지원 팝업 Close Button
    text: '15156557'
    optional: true
- tapOn: #다운로드 메뉴의 위치 변경 안내 팝업 Close Button
    id: 'net.cj.cjhv.gs.tving:id/iv_cancel'
    optional: true

# 드라마
- tapOn: '드라마'
# 전체
- tapOn: '전체'
# 필터
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/txt_filter_sort'
# 업데이트순
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/root_bottom_sheet_function'
    index: 1
- assertVisible: '업데이트순'

- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/txt_filter_sort'
# 신작순
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/root_bottom_sheet_function'
    index: 2
- assertVisible: '신작순'

# 콘텐츠 상세화면 랜딩
- tapOn:
    id: 'net.cj.cjhv.gs.tving:id/iv_thumbnail'
    index: 1

# 콘텐츠 상세페이지 진입 확인
- assertVisible:
    id: 'net.cj.cjhv.gs.tving:id/vodPlayerTitleText'
- assertVisible: '찜'
- assertVisible: '공유'
