appId: net.cj.cjhv.gs.tving
---
# 로그아웃
# TestRail Case ID: 313770
# https://tving.testrail.io/index.php?/cases/view/313770
# (수동 변환 필요)
#- launchApp
- assertVisible:
    id: "net.cj.cjhv.gs.tving:id/imageMyProfile"
- tapOn:
    id: "net.cj.cjhv.gs.tving:id/imageMyProfile"
- repeat:
    while:
      notVisible:
        text: "로그아웃" # 실제 버튼의 텍스트로 변경해주세요
    commands:
      - swipe:
          direction: UP
          duration: 1000
- assertVisible: "로그아웃"
- tapOn: "로그아웃"
- tapOn: "로그아웃"